Adding a post instal copy operation

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "description": "The style guide for typescript projects at Cinergix. ",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "postinstall": "cp tslint.json ../../. && cp .editorconfig ../../."
     },
     "repository": {
         "type": "git",
