--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "shelljs": "^0.7.6"
     },
     "peerDependencies": {
-        "tslint-eslint-rules": "^3.4.0",
-        "codelyzer": "^3.0.0-beta.3"
+        "tslint-eslint-rules": "^5.4.0",
+        "codelyzer": "^5.1.2"
     }
 }
